<resources>
    <string name="app_name">AppWithHostSDKDemo</string>
    <string name="game_name_default">Game Name</string>
    <string name="game_desc_default">Game Description</string>
    <string name="game_type_default">Game Type</string>
    <string name="game_play">打开</string>
    <string name="game_icon">game_icon</string>
    <string name="search">搜索</string>
    <string name="background_image">Background Image</string>
    <string name="instant_games">Instant Games</string>
    <string name="game_list_background_image">Game List Background Image</string>
    <string name="unity_minigame_host">Unity 小游戏宿主</string>
    <string name="recently_played">最近游玩</string>
    <string name="more">更多</string>
    <string name="all_games">所有游戏</string>
    <string name="home_title_background_mask">Home Title Background Mask</string>
    <string name="home_title_background">Home Title Background</string>
    <string name="game_badge">Game Badge</string>
    <string name="back_btn">Back Btn</string>
    <string name="scan_tip">请将二维码放入框中扫描</string>
    <string name="please_input_test_pkg_info_url">请输入测试包信息地址</string>
    <string name="download_pkg_error_hint">游戏包下载失败</string>
    <string name="list">列表</string>
    <string name="scan">扫码</string>
    <string name="default_server_domain">Default Server Domain</string>
    <string name="default_org_name">Default Org Name</string>
    <string name="default_runtime_sdk_version">Default Runtime SDK Version</string>
    <string name="setting">setting</string>
    <string name="version_info">Version Info:</string>
    <string name="auth_info">Auth Info:</string>
    <string name="default_mock_code">000000-000000-000000-000000</string>
    <string name="hint_code">Code</string>
    <string name="server">Server:</string>
    <string name="sdk">SDK:</string>
    <string name="code">Code:</string>
    <string name="org">Org:</string>
    <string name="reward_ad_material">Reward Ad Material</string>
    <string name="reward_countdown">还剩 Ns 获得奖励</string>
    <string name="non_gaming_areas">Non-gaming areas</string>
    <string name="gaming_area_background">Gaming area background</string>
    <string name="diy_button">DIY Button</string>
</resources>