<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:background="?android:attr/selectableItemBackground"
    android:gravity="center">

    <com.u3d.appwithhostsdkdemo.home.ui.RoundedLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="12dp">
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/game_badge"
            android:background="@drawable/home_game_default_icon">
        </ImageView>
    </com.u3d.appwithhostsdkdemo.home.ui.RoundedLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_name_default"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end" />

        <LinearLayout
            android:id="@+id/tagsLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <com.u3d.appwithhostsdkdemo.home.ui.RoundedTagView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </com.u3d.appwithhostsdkdemo.home.ui.RoundedTagView>
        </LinearLayout>

        <TextView
            android:id="@+id/descTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/game_desc_default"
            android:textSize="12sp"
            android:maxLines="1"
            android:ellipsize="end" />
    </LinearLayout>

    <com.u3d.appwithhostsdkdemo.home.ui.RoundedLayout
        android:id="@+id/playRl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        app:cornerRadius="14dp"
        android:background="@color/play_btn_bg">

        <TextView
            android:layout_width="60dp"
            android:layout_height="28dp"
            android:text="@string/game_play"
            android:textColor="@color/play_btn_text"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textSize="14sp">
        </TextView>
    </com.u3d.appwithhostsdkdemo.home.ui.RoundedLayout>
</LinearLayout>