<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.journeyapps.barcodescanner.DecoratedBarcodeView
        android:id="@+id/barcodeView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:zxing_scanner_layout="@layout/scan_custom_barcode_scanner">
    </com.journeyapps.barcodescanner.DecoratedBarcodeView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:gravity="center">

            <com.u3d.appwithhostsdkdemo.home.ui.RoundedLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cornerRadius="16dp"
                android:background="@color/play_btn_bg"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">
                <EditText
                    android:id="@+id/downloadUrlEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/please_input_test_pkg_info_url"
                    android:textSize="12sp"
                    android:maxHeight="60dp"
                    android:inputType="textUri"
                    android:ellipsize="end">
                </EditText>
            </com.u3d.appwithhostsdkdemo.home.ui.RoundedLayout>

            <TextView
                android:id="@+id/playBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_play"
                android:layout_marginStart="16dp"
                android:textColor="@color/play_btn_text"
                android:textSize="12sp">
            </TextView>

        </LinearLayout>

        <TextView
            android:id="@+id/errorTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/download_pkg_error_hint"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/error_hint">
        </TextView>
    </LinearLayout>



</RelativeLayout>